// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container for ColorSwitcher should renders if children count more then 12 1`] = `
<div
  className="wrapper"
>
  <div>
    color 1
  </div>
  <div>
    color 2
  </div>
  <div>
    color 3
  </div>
  <div>
    color 4
  </div>
  <div>
    color 5
  </div>
  <div>
    color 6
  </div>
  <div>
    color 7
  </div>
  <div>
    color 8
  </div>
  <div>
    color 9
  </div>
  <div>
    color 10
  </div>
  <button
    className="link"
    onClick={[Function]}
  >
    See 
    More
  </button>
</div>
`;

exports[`Container for ColorSwitcher shouldn't renders only children if children count less then 13 1`] = `
Array [
  <div>
    color 1
</div>,
  <div>
    color 2
</div>,
  <div>
    color 3
</div>,
  <div>
    color 4
</div>,
  <div>
    color 5
</div>,
  <div>
    color 6
</div>,
  <div>
    color 7
</div>,
  <div>
    color 8
</div>,
  <div>
    color 9
</div>,
  <div>
    color 10
</div>,
  <div>
    color 11
</div>,
  <div>
    color 12
</div>,
]
`;
